force-app/main/default/objects/Macro_Site__c/fields/User_Description_Task__c.field-meta.xml
<CustomField>
    <fullName>User_Description_Task__c</fullName>
    <label>User Description (Task)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>