force-app/main/default/objects/Macro_Site__c/fields/Utility_Description__c.field-meta.xml
<CustomField>
    <fullName>Utility_Description__c</fullName>
    <label>Utility Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>