force-app/main/default/objects/Macro_Site__c/fields/Utility_Forecast_Disconnect_Date__c.field-meta.xml
<CustomField>
    <fullName>Utility_Forecast_Disconnect_Date__c</fullName>
    <label>Utility Forecast Disconnect Date</label>
    <type>Date</type>
</CustomField>