force-app/main/default/objects/Macro_Site__c/fields/Utility_Meter__c.field-meta.xml
<CustomField>
    <fullName>Utility_Meter__c</fullName>
    <label>Utility Meter</label>
    <length>200</length>
    <type>Text</type>
</CustomField>