force-app/main/default/objects/Macro_Site__c/fields/Utility_Provider__c.field-meta.xml
<CustomField>
    <fullName>Utility_Provider__c</fullName>
    <description>List Project: BVELU: 02/09/2021</description>
    <label>Utility Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>