force-app/main/default/objects/Macro_Site__c/fields/Utility_Request_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Utility_Request_Confirmation__c</fullName>
    <label>Utility Confirmation Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>