force-app/main/default/objects/Macro_Site__c/fields/Utility_Requested_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Utility_Requested_Close_Date__c</fullName>
    <label>Utility Requested Close Date</label>
    <type>Date</type>
</CustomField>