force-app/main/default/objects/Macro_Site__c/fields/Utility_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Utility_Site_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility Site ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Macro Sites</relationshipLabel>
    <relationshipName>Macro_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>