force-app/main/default/objects/Macro_Site__c/fields/Utility_Status__c.field-meta.xml
<CustomField>
    <fullName>Utility_Status__c</fullName>
    <label>Utility Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>New-Submitted</fullName>
            </value>
            <value>
                <fullName>Pending Additional Information</fullName>
            </value>
            <value>
                <fullName>Closed - Complete</fullName>
            </value>
            <value>
                <fullName>Closed - Cancelled</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>