force-app/main/default/objects/Macro_Site__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>List Project: BVELU: 02/08/2021</description>
    <label>Vendor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>